# routesmith

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RESUME.md  TESTING_SANDBOX.md  WHITEPAPER.md  docker-compose.yml  mkdocs.yml  pyproject.toml  routesmith.yaml.example
.github/workflows/: ci.yml  nightly.yml
benchmark/: BENCHMARK_STATE.md  config.py  dataset.py  harness.py  metrics.py  plot.py  resume.py  run_linucb_27d.py  run_linucb_fast.py
benchmark/experiments/: ablations.py  exp1_binary.py  exp2_multimodel.py
benchmark/results/: gsm8k_300_queries.json  mbpp_100_queries.json  mmlu_600_queries.json
benchmark/strategies/: base.py  lints.py  linucb.py  routellm_sw.py  static.py  ts_cat.py
benchmarks/: RERUN_WITH_REAL_DATA.md  __init__.py  feature_utils.py  run_benchmark.py  sw_router.py  synthetic_data.py
data/benchmark/: experiment_results.json  experiment_results_200.json  real_quality_matrix.json
docs/: 2026-04-12-agentic-routing-reflection.md  best-practices.md  budget-enforcement.md  compliance.md  cost-models.md  faq.md  index.md  multi-project.md  quickstart.md  tutorial.md
docs/concepts/: adaptive.md  budget.md  cache.md  strategies.md
docs/deployment/: docker.md
docs/integrations/: autogen.md  claude-code.md  codex.md  crewai.md  dspy.md  langchain.md  openclaw.md  opencode.md  pi.md  standalone.md
docs/migration/: litellm.md
docs/plans/: 2026-06-15-section-a-core-stability.md  2026-06-15-section-b-production-hardening.md  2026-06-15-section-c-live-testing.md  2026-06-15-section-d-documentation.md  2026-06-15-v0.2.0-stable-release.md  2026-06-16-v0.3.0-enterprise-design.md  2026-06-16-v0.3.0-enterprise-plan.md  2026-06-17-adoption-strategy-design.md
docs/superpowers/plans/: 2026-04-06-routesmith-routellm-benchmark.md  2026-04-12-agentic-routing.md  2026-04-12-custom-reward-fn.md
docs/superpowers/specs/: 2026-04-06-routesmith-icml-paper-design.md  2026-04-10-reward-function-design.md  2026-04-12-agentic-routing-design.md
examples/: basic_usage.py
paper/: build.sh  main.tex  references.bib
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_method.tex  04a_exp1.tex  04b_exp2.tex  05_analysis.tex  06_conclusion.tex
poc/: COMPETITIVE_MOAT.md  MOAT_SECTION.md  POC_COMPLETE.md  README.md  dashboard.py  demo.py  metrics.json  rl_demo.py
report/: 100_QUERY_FINAL_RESULTS.md  100_QUERY_SECTION.md  2026_UPDATE.md  ADDENDUM_100_QUERY_RESULTS.md  EXPERIMENTAL_EVALUATION.md  LIMITATIONS_EXPANDED.md  PRICING_TABLE.md  PROJECT_PLAN.md  PUBLICATION_README.md  REAL_EXPERIMENT_ANALYSIS.md  RESEARCH_SUMMARY.md  analyze_sweet_spot.py  analyze_sweet_spot_simple.py  batch1_results.json  batch2.py  batch2_results.json  batch3_results.json  batch3_run.py  benchmark_quality.py  benchmark_results.json  benchmark_v2.json  clean1.html  clean2.html  clean2.md  clean3.html  clean3.md  clean_final.md  create_html_paper.py  debug.tex  diverse_experiment.py  diverse_experiment_results.md  diverse_experiment_v2.py  enhanced_quality_metrics.json  executive_summary.md  experiment_raw.json  final1.html  final1.md  final2.html  final3.html  final3.md  (+154 more)
report/benchmarking/: enhanced_quality_section.md
report/data/: simulated_data.json
report/figures/: comparison_routellm.py  fig3_caption.txt  generate_figures.py  icml_style.py
report/literature/: citations.bib  literature_review.md  literature_review_complete.md  novelty_statement.md  venue_recommendations.md
report/llm_judge/: judge_evaluation.csv  judge_evaluation.json
report/real_100_queries/: metrics.json  progress_100.json  progress_25.json  progress_50.json  progress_75.json  results.json
report/real_50_queries/: metrics.json  results.json
report/real_experiment/: QUALITY_FIXED_RESULTS.md  experiment_results.csv  generate_comparison_figures.py  metrics.json  proper_experiment.py  quality_fixed_experiment.py  quality_fixed_metrics.json  quality_fixed_results.csv  quality_fixed_summary.json
report/routellm_emb_500/: data-00000-of-00001.arrow  dataset_info.json  state.json
report/routellm_train_500/: data-00000-of-00001.arrow  state.json
report/routellm_train_5k/: dataset_info.json  state.json
report/sweet_spot_analysis/: quick_analysis.json
results/: benchmark_results.json
scripts/: run_experiments.sh  run_multi_model_eval.py  run_remaining.sh
site/: 404.html  index.html
site/best-practices/: index.html
site/budget-enforcement/: index.html
site/compliance/: index.html
site/concepts/adaptive/: index.html
site/concepts/budget/: index.html
site/cost-models/: index.html
site/faq/: index.html
site/multi-project/: index.html
site/quickstart/: index.html
site/search/: search_index.json
src/benchmarking/: contextual_ts.py  run_comparison.py
src/routesmith/: __init__.py  cli_dashboard.py  client.py  config.py  exceptions.py  explanation.py  verification.py
tests/: __init__.py  conftest.py  test_ab_test.py  test_agent_inferencer.py  test_anthropic_integration.py  test_autogen_integration.py  test_cache.py  test_capacity_tracker.py  test_circuit_breaker.py  test_cli.py  test_client.py  test_config.py  test_conversation_tracker.py  test_cost_model.py  test_crewai_integration.py  test_dataset.py  test_discovery.py  test_dspy_integration.py  test_exceptions.py  test_explanation.py  test_features.py  test_feedback.py  test_free_models_preset.py  test_health_endpoints.py  test_langchain_integration.py  test_learner.py  test_lints.py  test_linucb.py  test_logging.py  test_metrics.py  test_metrics_endpoint.py  test_polls.py  test_proxy.py  test_quality_model.py  test_registry.py  test_retry.py  test_reward.py  test_router.py  test_v030_integration.py  test_verification.py
tests/integration/: __init__.py
tests/manual/: __init__.py  openclaw_provider_config.json  test_basic_routing.py  test_langchain_live.py  test_openclaw_e2e.md  test_openclaw_integration.sh  test_openclaw_live.py  test_real_api.py
tests/perf/: test_memory.py  test_routing_latency.py
tests/unit/: __init__.py
(+67 files in other folders)
