[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routesmith"
version = "0.1.0"
description = "Adaptive LLM execution engine - intelligent routing, cascading, caching, and budget management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "routesmith contributors" }
]
keywords = [
    "llm",
    "routing",
    "optimization",
    "ai",
    "cost-optimization",
    "caching",
    "cascading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cache = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
predictor = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/routesmith/routesmith"
Documentation = "https://github.com/routesmith/routesmith#readme"
Repository = "https://github.com/routesmith/routesmith"

[tool.hatch.build.targets.wheel]
packages = ["src/routesmith"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
