[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routesmith"
version = "0.5.0-beta"
description = "Adaptive LLM execution engine - intelligent routing, cascading, caching, and budget management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "routesmith contributors" }
]
keywords = [
    "llm",
    "routing",
    "optimization",
    "ai",
    "cost-optimization",
    "caching",
    "cascading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "simpleeval>=0.9.13",
]

[project.scripts]
routesmith = "routesmith.cli.main:main"

[project.optional-dependencies]
proxy = [
    "pyyaml>=6.0.0",
    "httpx>=0.24.0",
    "questionary>=2.0.0",
    "certifi>=2024.0.0",
    "prometheus-client>=0.16.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pip-audit>=2.0.0",
    "scikit-learn>=1.3.0",
    "prometheus-client>=0.16.0",
]
cache = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]
tui = [
    "textual>=0.40.0",
]
predictor = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
dspy = [
    "dspy-ai>=2.0.0",
]
crewai = [
    "crewai>=0.80.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
langchain = [
    "langchain-core>=0.3.0",
]
langchain-agents = [
    "langchain-core>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-supervisor>=0.0.20",
    "langgraph-swarm>=0.1.0",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "pymdown-extensions>=10.0.0",
]
# All optional dependencies (complete install)
all = [
    "routesmith[proxy,cache,tui,predictor,anthropic,dspy,crewai,autogen,langchain,docs]",
]

[project.urls]
Homepage = "https://github.com/routesmith/routesmith"
Documentation = "https://github.com/routesmith/routesmith#readme"
Repository = "https://github.com/routesmith/routesmith"

[tool.hatch.build.targets.wheel]
packages = ["src/routesmith"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "numpy",
    "numpy.*",
]
ignore_errors = true

# Pre-existing type issues (see above)
[[tool.mypy.overrides]]
module = [
    "routesmith.proxy.server",
    "routesmith.proxy.handler",
    "routesmith.cli.serve",
    "routesmith.cli.yaml_loader",
    "routesmith.cli.stats",
    "routesmith.integrations.anthropic",
    "routesmith.integrations.autogen",
    "routesmith.integrations.crewai",
    "routesmith.integrations.dspy",
    "routesmith.integrations.langchain",
    "routesmith.feedback.polls",
    "routesmith.feedback.conversation",
    "routesmith.feedback.reward",
    "routesmith.predictor.agent_inferencer",
    "routesmith.predictor.lints",
    "routesmith.predictor.neural_ucb",
    "routesmith.predictor.reinforce",
    "routesmith.predictor.warmstart_linucb",
    "routesmith.cache.semantic",
    "routesmith.cli_dashboard",
    "routesmith.verification",
    "routesmith.client",
    "routesmith.predictor.linucb",
    "routesmith.predictor.model",
    "routesmith.strategy.router",
]
disallow_untyped_defs = false
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_api: marks tests that require API keys (deselect with '-m \"not requires_api\"')",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
